<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colormenu"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView

        android:id="@+id/name_popup_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:text="@string/name"
        android:padding="@dimen/_3sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:textColor="@color/white"
        android:id="@+id/date_popup_track"
        android:padding="@dimen/_3sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="@+id/name_popup_track"
        app:layout_constraintStart_toStartOf="@+id/name_popup_track"
        app:layout_constraintTop_toBottomOf="@+id/name_popup_track" />

    <TextView
        android:id="@+id/artist_popup_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/artist"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/date_popup_track"
        app:layout_constraintStart_toStartOf="@+id/date_popup_track"
        app:layout_constraintTop_toBottomOf="@+id/date_popup_track" />
</LinearLayout>