<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.MusicDetailActivity">
    <ImageView
        android:id="@+id/img_home_list_screen_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/sontung_mtp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_home_list_detail" />

    <ImageView
        android:id="@+id/img_home_list_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:src="@drawable/custom_bg_albumlist"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/img_home_list_screen_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:padding="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:id="@+id/img_back_detail_music"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pressback" />

    <TextView
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:id="@+id/txt_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chi_ti_t"
        app:layout_constraintBottom_toBottomOf="@+id/img_back_detail_music"
        app:layout_constraintStart_toEndOf="@+id/img_back_detail_music"
        app:layout_constraintTop_toTopOf="@+id/img_back_detail_music" />

    <ImageView
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/imageView15"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pen" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detail">

        <ImageView
            android:id="@+id/img_detail_music"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@mipmap/ic_launcher" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:gravity="center"
        android:id="@+id/txt_title_detail_music"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:ellipsize="marquee"
        android:fontFamily="@font/roboto"
        android:singleLine="true"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:background="@drawable/custom_border_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_detail_music"
        app:layout_constraintVertical_bias="0.0">

        <TextView

            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/album"
            android:textColor="@color/graybackground"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_album_detail_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/textview"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <View
            android:background="@color/graybackground"
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_album_detail_music" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/th_lo_i"
            android:textColor="@color/graybackground"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/txt_category_detail_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/textview"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <View
            android:background="@color/graybackground"
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_category_detail_music" />

        <TextView
            android:id="@+id/txt_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/d_i_b_i_h_t"
            android:textColor="@color/graybackground"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/view1"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <TextView
            android:id="@+id/txt_length_detail_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/textview"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="@+id/txt_length"
            app:layout_constraintTop_toBottomOf="@+id/txt_length" />

        <View
            android:background="@color/graybackground"
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_length_detail_music" />

        <TextView
            android:id="@+id/txt_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/s_c_a_b_i_h_t"
            android:textColor="@color/graybackground"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/txt_number_detail_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/textview"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="@+id/txt_number"
            app:layout_constraintTop_toBottomOf="@+id/txt_number" />

        <View
            android:background="@color/graybackground"
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_number_detail_music" />

        <TextView
            android:id="@+id/txt_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/nh_d_ng"
            android:textColor="@color/graybackground"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:layout_marginTop="@dimen/_3sdp"
            android:id="@+id/txt_tpye_detail_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/textview"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="@+id/txt_type"
            app:layout_constraintTop_toBottomOf="@+id/txt_type" />

        <View
            android:background="@color/graybackground"
            android:layout_marginTop="@dimen/_3sdp"
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_tpye_detail_music" />

        <TextView
            android:layout_marginTop="@dimen/_7sdp"
            android:id="@+id/txt_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/k_ch_th_c"
            android:textColor="@color/graybackground"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <TextView
            android:layout_marginTop="@dimen/_3sdp"
            android:id="@+id/txt_size_detail_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/textview"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="@+id/txt_size"
            app:layout_constraintTop_toBottomOf="@+id/txt_size" />

        <View
            android:background="@color/graybackground"
            android:layout_marginTop="@dimen/_3sdp"
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_size_detail_music" />

        <TextView
            android:layout_marginTop="@dimen/_7sdp"
            android:id="@+id/txt_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/ng_d_n"
            android:textColor="@color/graybackground"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/view5"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <TextView
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="@dimen/_3sdp"
            android:id="@+id/txt_path_detail_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/textview"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="@+id/txt_path"
            app:layout_constraintTop_toBottomOf="@+id/txt_path" />

        <View
            android:background="@color/graybackground"
            android:layout_marginTop="@dimen/_3sdp"
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_path_detail_music" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>